add funtion register
